package insuranceManagementSystem;

// Команда
public interface Command {
    void execute();
}

