package invoke;

import insuranceManagementSystem.Command;

// Ініціатор дії
public class Invoker {
    private Command command;

    public void setCommand(Command command) {
        this.command = command;
    }

    public void executeCommand() {
        command.execute();
    }
}
